--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -73,7 +73,7 @@ body{
 	margin-top: 10px;
 	color: white;
 	font-size: 25px;
-	background-color: rgb(29,29,29);
+	background-color: rgb(50,50,50);
 	margin-bottom: 10px;
 	text-decoration: none;
 }
@@ -82,19 +82,14 @@ body{
 	height: 100px;
 	width: 1500px;
 	text-align: center;
-	background-color: rgb(29, 29, 29);
+	background-color: rgb(50, 50, 50);
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
 #resume{
-	margin-left: 8%;
 	margin-top: 35px;
-}
-
-#quotes{
-	margin-left: 8%;
 }
 
 picture{
@@ -140,7 +135,7 @@ article{
 	border-radius: 10px;
 }
 
-aside{
+/* aside{
 	padding-top: 50px;
 	background-color: yellow;
 	height: 300px;
@@ -148,8 +143,8 @@ aside{
 	width: 30%;
 	display: inline-block;
 	vertical-align: top;
-	border-radius: 10px;
-}
+	/* border-radius: 10px;
+} */
 
 
 .intro{
@@ -220,26 +215,54 @@ margin-bottom: 150px;
 
 .quotePicLeft{
 	width: 1500px;
-	height: 350px;
-	margin: 0 auto;
+	height: 300px;
 	border: dashed;
+	border-color: blue;
+	margin: 0 auto;
+	margin-bottom: 75px;
 }
 
 .picLeft{
-	background-color: blue;
 	float: left;
 }
 
-#emerson{
-	margin-top: 25px;
-	margin-left: 25px;
+.textRight{
+	float: right;
+	width: 1249px;
+	height: 300px;
 }
 
+.actualTextRight{
+	text-align: center;
+	margin-top: 100px;
+	font-size: 36px;
+	line-height: 1.6;
+	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+}
 
-.quoteTextRight{
-	text-align: right;
-	padding-bottom: 100px;
-	width: 1250px;
-	background-color: pink;
+.quotePicRight{
+	width: 1500px;
+	height: 300px;
+	border: dashed;
+	margin: 0 auto;
+	border-color: red;
+	margin-bottom: 75px;
+}
 
+.picRight{
+	float: right;
+}
+
+.textLeft{
+	float: left;
+	width: 1249px;
+	height: 300px;
+}
+
+.actualTextLeft{
+	text-align: center;
+	margin-top: 100px;
+	font-size: 36px;
+	line-height: 1.6;
+	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 }
