--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -61,8 +61,8 @@ body{
 	margin-top: 25px;
 	text-align: center;
 	font-size: 55px;
-	font-family: "Garamond Light", 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
-	font-weight: 700;
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-weight: 200;
 }
 
 .links{
