--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -60,13 +60,17 @@ body{
 .heading{
 	margin-top: 25px;
 	margin-bottom: 25px;
-	text-align: center;
 	font-size: 55px;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 500;
+	/* width: 300px; */
+	text-align: center;
+
+
 }
 
 .links{
+	float: center;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 	display: inline-block;
 	text-align: center;
@@ -78,6 +82,15 @@ body{
 	margin-right: 3px;
 	margin-bottom: 10px;
 	text-decoration: none;
+}
+
+header{
+	height: 200px;
+	width: 1500px;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 #buttons{
@@ -101,21 +114,6 @@ picture{
 	text-align: center;
 }
 
-
-
-
-/* section{
-	padding-top: 50px;
-	background-color: green;
-	height: 300px;
-	text-align: center;
-	width: 63%;
-	display: inline-block;
-	margin-right: 20px;
-	margin-left: 20px;
-	border-radius: 10px;
-} */
-
 article{
 	background-color: orange;
 	padding: 10px;
@@ -128,25 +126,12 @@ article{
 	border-radius: 10px;
 }
 
-/* aside{
-	padding-top: 50px;
-	background-color: yellow;
-	height: 300px;
-	text-align: center;
-	width: 30%;
-	display: inline-block;
-	vertical-align: top;
-	/* border-radius: 10px;
-} */
-
-
 .intro{
 	text-align: center;
 	color: black;
 	font-size: 36px;
 	padding-top:24px;
 }
-
 
 hr{
 	width: 90%;
@@ -260,4 +245,13 @@ margin-bottom: 150px;
 
 #janus{
 	border-color: green;
+}
+
+.pictureAndBio{
+	padding: 10px;
+	text-align: center;
+	margin-top: 100px;
+	font-size: 36px;
+	line-height: 1.6;
+	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 }
