--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -50,7 +50,11 @@ table {
 	border-spacing: 0;
 }
 
-/*This is where the actual CSS begins*/
+/*-------------------This is where the actual CSS begins------------------------*/
+
+html{
+	overflow-y: scroll;
+}
 
 body{
 	background-color: white;
@@ -92,7 +96,6 @@ header{
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
-	background-color: blue;
 }
 
 #buttons{
@@ -148,25 +151,6 @@ margin-bottom: 150px;
 	line-height: 1.5;
 }
 
-/* #CentralSection{
-	min-width: 1000px;
-	margin: 0 auto;
-	border-style: solid;
-	border-width: 5px;
-	width: 90%;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	border-radius: 10px;
-	background-color: red;
-	padding:10px;
-} */
-
-/* #articleid{
-	border-style: solid;
-	border-width: 5px;
-	border-color: black;
-} */
-
 #quoteDescriptionDiv{
   height: 300px;
   width: 1500px;
@@ -176,18 +160,16 @@ margin-bottom: 150px;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 	font-size: 25px;
 	line-height: 1.7;
-	background-color: purple;
 	margin-bottom: 50px;
 }
 
 .quotePicLeft{
 	width: 1500px;
 	height: 300px;
-	/* border: dashed; */
-	/* border-color: blue; */
+	border: dashed;
+	border-color: blue;
 	margin: 0 auto;
 	margin-bottom: 75px;
-	background-color: green;
 }
 
 .picLeft{
@@ -201,7 +183,7 @@ margin-bottom: 150px;
 }
 
 .actualTextRight{
-	/* padding: 10px; */
+	padding: 10px;
 	text-align: center;
 	margin-top: 100px;
 	font-size: 36px;
@@ -212,11 +194,10 @@ margin-bottom: 150px;
 .quotePicRight{
 	width: 1500px;
 	height: 300px;
-	/* border: dashed; */
+	border: dashed;
 	margin: 0 auto;
-	/* border-color: red; */
+	border-color: red;
 	margin-bottom: 75px;
-	background-color: yellow;
 }
 
 .picRight{
@@ -230,7 +211,7 @@ margin-bottom: 150px;
 }
 
 .actualTextLeft{
-	/* padding: 10px; */
+	padding: 10px;
 	text-align: center;
 	margin-top: 100px;
 	font-size: 36px;
@@ -239,17 +220,15 @@ margin-bottom: 150px;
 }
 
 #janus{
-	/* border-color: green; */
+	border-color: green;
 }
 
 .pictureAndBio{
 	width: 1500px;
 	height: 300px;
-	/* border: dashed; */
+	border: dashed;
 	margin: 0 auto;
-	/* border-color: red; */
 	text-align: center;
-	background-color: red;
 	font-size: 36px;
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
