--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -54,6 +54,7 @@ table {
 
 html{
 	overflow-y: scroll;
+	zoom: 90%;
 }
 
 body{
@@ -70,8 +71,6 @@ body{
 	font-weight: 500;
 	/* width: 300px; */
 	text-align: center;
-
-
 }
 
 .links{
@@ -225,11 +224,39 @@ margin-bottom: 150px;
 
 .pictureAndBio{
 	width: 1500px;
-	height: 300px;
-	border: dashed;
+	height: 450px;
+	border: solid;
+	border-color: purple;
 	margin: 0 auto;
 	text-align: center;
-	font-size: 36px;
+	/* padding:20px; */
+	font-size: 24px;
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+}
+
+#otto{
+	width: 300px;
+	height: 450px;
+	float: right;
+}
+
+.bio{
+	width: 1200px;
+	height: 360;
+	float: left;
+}
+
+.actualBio{
+	padding: 10px;
+	text-align: center;
+	float: left;
+}
+
+#ethicsBowlCases{
+	color:black;
+}
+
+#studCoFinances{
+	color:black;
 }
