--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -222,14 +222,24 @@ margin-bottom: 150px;
 	border-color: green;
 }
 
+#bottome{
+	padding: 0px;
+	margin-top: 80px;
+}
+
+#angelou2{
+	padding: 0px;
+	margin-top: 75px;
+}
+
 .pictureAndBio{
 	width: 1500px;
 	height: 450px;
 	border: solid;
-	border-color: purple;
+	border-color: green;
 	margin: 0 auto;
 	text-align: center;
-	/* padding:20px; */
+	margin-bottom: 20px;
 	font-size: 24px;
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
@@ -238,13 +248,13 @@ margin-bottom: 150px;
 #otto{
 	width: 300px;
 	height: 450px;
-	float: right;
+	float: left;
 }
 
 .bio{
 	width: 1200px;
 	height: 360;
-	float: left;
+	float: right;
 }
 
 .actualBio{
