--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -257,7 +257,7 @@ picture{
 
 .pictureAndBio{
 	width: 1500px;
-	height: 450px;
+	height: 455px;
 	border: solid;
 	border-color: green;
 	margin: 0 auto;
@@ -269,6 +269,7 @@ picture{
 }
 
 #otto{
+	padding-top: 2.5px;
 	width: 300px;
 	height: 450px;
 	float: left;
