--- a/otto_brown/assets/css/main.css
+++ b/otto_brown/assets/css/main.css
@@ -68,7 +68,7 @@ body{
 .heading{
 	margin-top: 25px;
 	margin-bottom: 25px;
-	font-size: 55px;
+	font-size: 3.4375em; /*55px*/
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 	font-weight: 500;
 	/* width: 300px; */
@@ -85,7 +85,7 @@ body{
 	width: 300px;
 	margin-top: 10px;
 	color: white;
-	font-size: 30px;
+	font-size: 1.875em; /*30px*/
 	background-color: rgb(50, 50, 50);
 	margin-right: 3px;
 	margin-bottom: 10px;
@@ -126,13 +126,13 @@ text-align: center;
 margin: 0 auto;
 font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 color: rgb(72, 81, 86);
-font-size: 24px;
+font-size: 1.5em; /*24px*/
 margin-bottom: 150px;
 }
 
 #SJQuote{
 	font-style: italic;
-	font-size: 20px;
+	font-size: 1em; /*20px*/
 	width: 1000px;
 	margin: 0 auto;
 	line-height: 1.5;
@@ -149,7 +149,7 @@ picture{
 .intro{
 	text-align: center;
 	color: black;
-	font-size: 36px;
+	font-size: 2.25em; /*36px*/
 	padding-top:24px;
 }
 
@@ -162,7 +162,7 @@ picture{
 	margin: 0 auto;
 	margin-top: 30px;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
-	font-size: 25px;
+	font-size: 1.5625em; /*25px*/
 	line-height: 1.7;
 	margin-bottom: 50px;
 }
@@ -194,7 +194,7 @@ picture{
 	padding: 10px;
 	text-align: center;
 	margin-top: 100px;
-	font-size: 36px;
+	font-size: 2.25em; /*36px*/
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 }
@@ -222,7 +222,7 @@ picture{
 	padding: 10px;
 	text-align: center;
 	margin-top: 100px;
-	font-size: 36px;
+	font-size: 2.25em; /*36px*/
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 }
@@ -266,7 +266,7 @@ picture{
 	margin: 0 auto;
 	text-align: center;
 	margin-bottom: 20px;
-	font-size: 24px;
+	font-size: 1.5em; /*24px*/
 	line-height: 1.6;
 	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
 }
