--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,15 +69,15 @@ body{
 	margin-top: 25px;
 	margin-bottom: 25px;
 	font-size: 3.4375em; /*55px*/
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	font-weight: 500;
+	font-family: 'Raleway', sans-serif;
+	font-weight: 300;
 	/* width: 300px; */
 	text-align: center;
 }
 
 .links{
 	float: center;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight: 1000;
 	/* font-style: bold; */
 	display: inline-block;
@@ -126,7 +126,7 @@ width: 1500px;
 padding-top: 25px;
 text-align: center;
 margin: 0 auto;
-font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+font-family: 'Cormorant Garamond', serif;
 color: rgb(72, 81, 86);
 font-size: 1.5em; /*24px*/
 margin-bottom: 150px;
@@ -168,7 +168,7 @@ picture{
 	text-align: center;
 	margin: 0 auto;
 	margin-top: 30px;
-	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+	font-family: 'Cormorant Garamond', serif;
 	font-size: 1.5625em; /*25px*/
 	line-height: 1.7;
 	margin-bottom: 50px;
@@ -203,7 +203,7 @@ picture{
 	margin-top: 100px;
 	font-size: 2.25em; /*36px*/
 	line-height: 1.6;
-	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+	font-family: 'Cormorant Garamond', serif;
 }
 
 .quotePicRight{
@@ -231,7 +231,7 @@ picture{
 	margin-top: 100px;
 	font-size: 2.25em; /*36px*/
 	line-height: 1.6;
-	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+	font-family: 'Cormorant Garamond', serif;
 }
 
 #janus{
@@ -275,7 +275,7 @@ picture{
 	margin-bottom: 20px;
 	font-size: 1.5em; /*24px*/
 	line-height: 1.6;
-	font-family: Garamond, 'Baskerville Old Face', 'Hoefler Text', 'Times New Roman', serif;
+	font-family: 'Cormorant Garamond', serif;
 }
 
 #otto{
